--- a/public/styles/agendamento.css
+++ b/public/styles/agendamento.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../images/bg-medico.png);
+    background-image: url(../assets/bg-medico.png);
 }
 #page-agendamento header .container{
     display: flex;
