--- a/public/styles/cadastro.css
+++ b/public/styles/cadastro.css
@@ -1,6 +1,6 @@
 body{
     background: white;
-    background-image: url(../images/bg-medico.png);
+    background-image: url(../assets/bg-medico.png);
 }
 #cadastro{
     height: 100vh;
