--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,6 +1,6 @@
 body{
     background: #52B7C5;
-    background-image: url(../images/bg-Home.png);
+    background-image: url(../assets/bg-Home.png);
 }
 #page-home header{
     height: 62vw;
@@ -31,7 +31,7 @@ body{
     background: #f8f9fa;
     border-radius: 13px;
     box-shadow: 0px 3px 6px rgba(0,0,0,0.20);
-    background-image: url(../images/medica.svg);
+    background-image: url(../assets/medica.svg);
     background-repeat: no-repeat;
     background-position: right;
     padding: 20px;
