--- a/src/views/date.html
+++ b/src/views/date.html
@@ -1,38 +1,21 @@
-<!doctype html>
-<html lang="pt_br">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "layout.html" %}
+{% set mainId = "page-agendamento" %}
 
-    <link href="https://fonts.googleapis.com/styles2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+{% block styles %}
     <link rel="stylesheet" href="styles/agendamento.css">
     <link rel="stylesheet" href="styles/calendario.css">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/bootstrap-datepicker.css">
+{% endblock styles %}
 
-    <title>Pediatria</title>
-  </head>
-  <body>
-    <main id="page-agendamento">
-        <header>
-            <div class="container">
-                <div class="contet">
-                    <a href="index.html"><i class="fa fa-angle-left" aria-hidden="true"></i> <span>Voltar</span></a>
-                    <!-- <h5>Selecione um médico que ira te atender</h5> -->
-                </div>
-                <div class="icon">
-                    <span><img src="/images/cardiologista.svg" alt="Cardiologista"></span>
-                </div>
-            </div>
-            
-        </header>
+
+{% block content %}
+
+        {% include  "partials/header-nav.html" %}
 
         <section class="agendar">
             <div class="container">
                 <div class="agendamento">
-                    <form action="">
+                    <form action="/savepoint" method="POST">
                         <div class="medico-calendario">
                             <div class="medico">
                                 <div class="row">
@@ -40,7 +23,7 @@
                                         <div class="content">
                                             <div class="informacoes">
                                                 <span class="img-box">
-                                                    <img src="/images/foto-medico.svg" alt="Médico">
+                                                    <img src="/assets/foto-medico.svg" alt="Médico">
                                                 </span>
                                                 <div class="textbox">
                                                     <h6>Dr. José Augusto</h6>
@@ -52,7 +35,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="calendario">
+                            <div class="calendario mt-3">
                                 <div id="sandbox">
                                     <input type="text" name="data">
                                 </div>
@@ -76,12 +59,12 @@
                 </div>
             </div>
         </section>
-    </main>
+{% endblock content %}
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+
+{% block scripts %}
     <script src="scripts/bootstrap-datepicker.min.js"></script>
     <script src="scripts/bootstrap-datepicker.pt-BR.min.js"></script> 
     <script src="scripts/agendamento.js"></script>
@@ -97,5 +80,4 @@
             toggleActive: true
         });
     </script>
-  </body>
-</html>
+{% endblock scripts %}
